# isa-api

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: buildandtestpython.yml  pythonpublish.yml
docs/: conf.py
features/: environment.py
features/steps/: isa-file-handler.py  sra-to-isatab-batch-conversion.py
isa-cookbook/content/notebooks/: isa-protocol-type-synonym-effect-on-assay-table.ipynb  light-sensitity-study-repeated-treatment-design.ipynb  xomics.ipynb
isatools/: __init__.py  __main__.py  constants.py  logging.py  magetab.py  sampletab.py  sra.py  utils.py
isatools/convert/: __init__.py  isatab2cedar.py  isatab2json.py  isatab2magetab.py  isatab2sampletab.py  isatab2sra.py  isatab2w4m.py  json2isatab.py  json2jsonld.py  json2magetab.py  json2sampletab.py  json2sra.py  magetab2isatab.py  magetab2json.py  mzml2isa.py  sampletab2isatab.py  sampletab2json.py
isatools/convert/experimental/: nih_dcc_flux.py
isatools/create/: assay_templates.py  connectors.py  constants.py  errors.py  model.py
isatools/database/: __init__.py
isatools/database/models/: __init__.py  assay.py  characteristic.py  comment.py  constraints.py  datafile.py  factor_value.py  inputs_outputs.py  investigation.py  material.py  ontology_annotation.py  ontology_source.py  parameter.py  parameter_value.py  person.py  process.py  protocol.py  publication.py  relationships.py  sample.py  source.py  study.py  study_factor.py  utils.py
isatools/errors/: __init__.py
isatools/examples/: createFromSamplePlan.py  createSimpleISAJSON.py  createSimpleISAtab.py  modifyInvestigationOnly.py  validateISAjson.py  validateISAtab.py
isatools/graphQL/: custom_scalars.py  inputs.py  models.py  unions.py
isatools/graphQL/utils/: filters.py  find.py  search.py  validate.py
isatools/io/: isatab_configurator.py  isatab_parser.py
isatools/isajson/: __init__.py  dump.py  validate.py
isatools/isatab/: __init__.py  defaults.py  deprecated.py  graph.py  utils.py
isatools/isatab/dump/: __init__.py  core.py  utils.py  write.py
isatools/isatab/load/: ProcessSequenceFactory.py  __init__.py  core.py  mapping.py
isatools/isatab/validate/: __init__.py  core.py  store.py
isatools/isatab/validate/rules/: __init__.py  core.py  defaults.py  deprecated.py  rules_00xx.py  rules_10xx.py  rules_30xx.py  rules_40xx.py  rules_50xx.py
isatools/model/: __init__.py  assay.py  characteristic.py  comments.py  context.py  datafile.py  factor_value.py  identifiable.py  investigation.py  loader_indexes.py  logger.py  material.py  mixins.py  ontology_annotation.py  ontology_source.py  parameter_value.py  person.py  process.py  protocol.py  protocol_component.py  protocol_parameter.py  publication.py  sample.py  source.py  study.py  utils.py
isatools/net/: ax.py  biocrates2isatab.py  ols.py  pubmed.py  sra2isatab.py  storage_adapter.py
isatools/net/mtbls/: __init__.py  core.py  helpers.py  html.py  utils.py
isatools/net/mw2isa/: __init__.py
isatools/net/resources/biocrates/: biocrates-merge.py
isatools/resources/config/xml/: transcription_seq.xml
isatools/tests/: create_sample_assay_plan_odicts.py  utils.py
performances/: __main__.py  defaults.py  isajson.py  isatab.py  wrapper.py
tests/: test_magetab.py  test_sampletab.py  test_sra.py  test_tests_utils.py
tests/convert/: test_isatab2cedar.py  test_isatab2json.py  test_isatab2magetab.py  test_isatab2sampletab.py  test_isatab2sra.py  test_isatab2w4m.py  test_json2isatab.py  test_json2jsonld.py  test_json2magetab.py  test_json2sampletab.py  test_json2sra.py  test_magetab2isatab.py  test_magetab2json.py  test_mzml2isa.py  test_nihdcc2isa.py  test_sampletab2isatab.py  test_sampletab2json.py  test_sra2isatab.py
tests/create/: test-isacreate-ontosource.py  test_assay_templates.py  test_constant.py  test_create_connectors.py  test_create_models_json.py  test_create_models_study_design.py
tests/database/: test_model.py
tests/examples/: test_createSimpleISAtab.py  test_createsimpleISAjson.py  test_modifyInvestigationOnly.py  test_validateISAjson.py  test_validateISAtab.py
tests/isajson/: test_dump.py  test_isajson.py
tests/isatab/: test_isatab.py
tests/isatab/validate/: test_core.py
tests/model/: test_assay.py  test_characteristic.py  test_comments.py  test_context.py  test_datafile.py  test_factor_value.py  test_identifiable.py  test_investigation.py  test_load_indexes.py  test_material.py  test_mixins.py  test_ontology_annotation.py  test_ontology_source.py  test_parameter_value.py  test_person.py  test_process.py  test_process_sequence.py  test_protocol.py  test_protocol_component.py  test_protocol_parameter.py  test_publication.py  test_sample.py  test_source.py  test_study.py  test_to_dict.py  test_utils.py
tests/performances/: test_perf_isajson.py  test_perf_isatab.py
tests/test_clients/: test_biocrates2isatab.py  test_mw2isa.py  test_pubmed.py
tests/test_clients/mtbls/: test_html.py  test_metabolights.py  test_utils.py
tests/utils/: test_ax.py  test_commandline.py  test_graphQL.py  test_isatab_configurator.py  test_isatools_utils.py  test_storage_adapter.py
tests/validators/: test_validate_schemas.py  test_validate_test_data.py  test_validators.py
