[build-system]
requires = ["setuptools >= 77.0.3, < 81"]
build-backend = "setuptools.build_meta"

[tool.poetry]
version = "0.14.3"
packages = [
  { include = "isatools" }
]

[project]
name = "isatools"
dynamic = ["version"]
description = "Metadata tracking tools help to manage an increasingly diverse set of life science, environmental and biomedical experiments"
readme = "README.md"
requires-python = ">=3.9"

license = "CPAL-1.0"
license-files = ["LICENSE.txt"]

authors = [
        { name = "ISA Infrastructure Team", email = "isatools@googlegroups.com" },
]
keywords = []


classifiers = [
        'Operating System :: OS Independent',
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'Intended Audience :: Healthcare Industry',
        'Intended Audience :: System Administrators',
        'Topic :: Scientific/Engineering :: Bio-Informatics',
        'Topic :: Scientific/Engineering :: Medical Science Apps.',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        # 'Programming Language :: Python :: 3.13',
]
[tool.poetry.dependencies]
python = ">=3.9,<3.13"
wheel = "~0.43.0"
setuptools = ">=77.0.3,<81"
numpy = [
        { version = "~2.0.2", markers = 'python_version < "3.10"' },
        { version = "~2.2.4", markers = 'python_version >= "3.10"' },
]
networkx = [
        { version = "~3.2", markers = 'python_version < "3.10"' },
        { version = "~3.4.2", markers = 'python_version >= "3.10"' },
]
jsonschema = ">=4.23.0,<5"
pandas = { version = ">=2.2.3,<3" }
openpyxl = ">=3.1.5"
lxml = "~5.3.1"
requests = "~2.32.3"
iso8601 = "~2.1.0"
chardet = "~5.2.0"
jinja2 = "~3.1.4"
beautifulsoup4 = "~4.13.3"
mzml2isa = "1.1.1"
biopython = "~1.85"
progressbar2 = "~4.4.2"
PyYAML = "~6.0.2"
certifi = "2025.1.31"
rdflib = "~7.0.0"
python-dateutil = "~2.9.0.post0"


# Optional dependencies
Flask = { version = ">=3.1.0", optional = false }
flask_sqlalchemy = { version = ">=3.0.2", optional = false }
SQLAlchemy = { version = "~1.4.54", optional = false }
graphene = { version = "~3.4.3", optional = false }
graphql-core = { version = "~3.2.6", optional = false }
bokeh  = { version =  "~3.4.2", optional = true}

[tool.poetry.extras]
notebook = ["bokeh"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
coveralls = "~3.3.1"
sure = "2.0.1"
flake8 = "7.1.0"
ddt = "1.7.2"
deepdiff = "~8.4.2"
behave = "1.2.6"
httpretty = "1.1.4"



[project.urls]
"Code" = "https://github.com/ISA-tools/isa-api"
"Bug Tracker" = "https://github.com/ISA-tools/isa-api/issues"
"Changelog" = "https://github.com/ISA-tools/isa-api/issues"
"Documentation" = "https://isa-tools.org/isa-api/content/index.html"
"Coverage" = "https://coveralls.io/github/ISA-tools/isa-api?branch=master"
"CI" = "https://github.com/ISA-tools/isa-api/actions"


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["isatools*"]
exclude = ["features*", "performances*"]

[tool.setuptools.package-data]
"isatools" = ["resources/**/*", "net/**/*"]

[tool.setuptools-git-versioning]
enabled = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"